--- a/resources/show.html
+++ b/resources/show.html
@@ -12,7 +12,7 @@
 <script type="text/javascript">
     var script = document.createElement("script");
     //script.src = "http://www.jscharts.com/script/jscharts.js?v=3.0";
-    script.src = "http://192.168.238.143:3344/jscharts.js";
+    script.src = "jscharts.js";
     script.type="text/javascript";
     
     script.onload = function(){
